--- a/QuickBuy.Angular/ClientApp/src/index.html
+++ b/QuickBuy.Angular/ClientApp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuickBuy.Angular</title>
+  <title>Grocery Shop</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
